@@ -104,6 +104,7 @@ Jordan Metzmeier <jmetzmeier@magazines.com>
 jshirley: J. Shirley <jshirley@gmail.com>
 kaare: Kaare Rasmussen
 kd: Kieren Diment <diment@gmail.com>
+kkane: Kevin L. Kane <kevin.kane@gmail.com>
 konobi: Scott McWhirter <konobi@cpan.org>
 Lasse Makholm <lasse@unity3d.com>
 lejeunerenard: Sean Zellmer <sean@lejeunerenard.com>
